objects/advitya__UserSetting__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__currentQuery__c</fullName>
        <label>currentQuery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__masterCount__c</fullName>
        <label>masterCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advitya__userJson__c</fullName>
        <label>userJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>UserSetting</label>
    <nameField>
        <label>UserSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>